--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain==0.0.184
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit==1.18.1
+altair==4
 faiss-cpu==1.7.4
 huggingface-hub==0.14.1
 InstructorEmbedding==1.0.1
